<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="@dimen/size_of_layout"
    android:background="@color/colorGrey"
    android:padding="@dimen/padding"
    >

    <ImageView
        android:id="@+id/imagePoster"
        android:layout_width="@dimen/size_of_poster_width"
        android:layout_height="@dimen/size_of_poster_height"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@color/colorLightBlue" />

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Title"
        android:layout_gravity="center_horizontal"
        android:layout_toRightOf="@+id/imagePoster"
        android:layout_marginLeft="@dimen/padding"
        android:layout_alignTop="@+id/imagePoster"/>

    <TextView
        android:id="@+id/textNextDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nextEpisodeDate"
        android:layout_gravity="center_horizontal"
        android:layout_toRightOf="@+id/imagePoster"
        android:layout_marginLeft="@dimen/padding"
        android:layout_marginTop="@dimen/fab_margin"
        android:layout_marginBottom="@dimen/padding"
        android:layout_below="@id/textTitle"
        android:textSize="18dp"
        />

    <TextView
        android:id="@+id/textNextDate2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_toRightOf="@+id/textNextDate"
        android:layout_marginLeft="@dimen/padding"
        android:layout_marginTop="@dimen/fab_margin"
        android:layout_marginBottom="@dimen/padding"
        android:layout_below="@id/textTitle"
        android:textSize="18dp"
        android:layout_alignParentRight="true"
        />

    <Button
        android:id="@+id/buttonMarkWatched"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/markWatched"
        android:layout_gravity="center_horizontal"
        android:layout_toRightOf="@+id/imagePoster"
        android:layout_marginLeft="@dimen/padding"
        android:layout_marginTop="@dimen/padding"
        android:layout_below="@id/textNextDate"
        />

    <Button
        android:id="@+id/buttonAllEpisodes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/allEpisodes"
        android:layout_gravity="center_horizontal"
        android:layout_toRightOf="@+id/imagePoster"
        android:layout_marginLeft="@dimen/padding"
        android:layout_below="@id/buttonMarkWatched"
        android:layout_alignRight="@id/buttonMarkWatched"
        />

    <Button
        android:id="@+id/buttonStopTracking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stopTracking"
        android:background="@drawable/orange_round_corners_background"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        />



</RelativeLayout>